[general] fix social/vertical-emed modals ui & logic on mobile (#3472)

--- a/packages/ui-components/web/statics/styles/url-input-modal.scss
+++ b/packages/ui-components/web/statics/styles/url-input-modal.scss
@@ -155,6 +155,9 @@
   margin: 14px 0;
   .inputModal_mobile & {
     margin: 0;
+    &.textInput_margin_bottom {
+      margin-bottom: 14px;
+    }
   }
 }
 
